# modern-2d-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: GameWindow.cpp  GameWindow.h
engine/event/: KeyboardEvents.h  MouseEvents.h
engine/position/: Dimension.cpp  Dimension.h  Point.cpp  Point.h
engine/shape/: Circle.cpp  Circle.h  Color.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.h  Triangle.cpp  Triangle.h
engine/util/: Random.cpp  Random.h
example/: ExampleGame.cpp  ExampleGame.h
example/drawing/: DrawingGame.cpp  DrawingGame.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
